<?xml version="1.0"?>
<package format="2">
  <name>jaguar_utils</name>
  <version>0.0.0</version>
  <description>The jaguar_utils package</description>

  <maintainer email="aanabbas1@sheffield.ac.uk">Ahmed Abbas</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>


  <export>

  </export>
</package>
